--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </div>
 
   <audio id="audioPlayer" loop>
-    <source src="https://www.dropbox.com/scl/fi/v8dbihkx7pj30lmjt2kxk/SHE-LOOKS-LIKE-A-DREAM.mp3?rlkey=q951cxdk40i49tsr95d7l5s3e&st=m45mplf6&dl=1" type="audio/mpeg">
+    <source src="Love Like You - Rebecca Sugar (Lyrics).mp3" type="audio/mp3">
   </audio>
 
   <script src="script.js">
