--- a/Heart.html
+++ b/Heart.html
@@ -16,7 +16,10 @@
 </head>
 <body>
   <div class="scene" id="scene" data-bg="stars">
-
+   <p class="TH">things within my heart</p>
+ 
+ 
+    <p class="click">Click</p>
     <div class="heart-container">
       <button class="heart-btn" id="heartBtn" aria-label="Press the heart">
         <span class="heart">
