--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <title>For You</title>
@@ -18,6 +18,7 @@
   </head>
 
   <body>
+ 
     <div id="container"></div>
     <div class="glow"></div>
     <div id="controls"></div>
